# SCAKS

./: .README.md  .gitignore  .gitmodules  MANIFEST.in  README.md  README.rst  requirements.txt  setup.py
CExtension/: kmc_functions.py
c++/: CMakeLists.txt  Makefile  config-py2
c++/include/: kmc_functions.h
c++/src/: CMakeLists.txt  kmc_functions.cpp
c++/wrap/: CMakeLists.txt
catynetics/: __init__.py  mpicommons.py
catynetics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
catynetics/models/: kinetic_model.py  micro_kinetic_model.py
catynetics/parsers/: parser_base.py  rxn_parser.py
catynetics/plotters/: __init__.py
catynetics/solvers/: kmc_solver.py  steady_state_solver.py
catynetics/tests/: test_all.py
catynetics/utilities/: check_utilities.py  format_utilities.py
doc/source/: conf.py  index.rst
docs/source/: intro.rst
examples/CO-Oxidation-Pt-100/: kmc_processes.py  kmc_sites.py  pt-100.mkm  rel_energy.py  run.py
extensions/: Makefile
extensions/include/: kmc_functions.h  plugin_backends.h
extensions/src/: kmc_functions.c  kmc_functions.cpp
extensions/unittest/: Makefile  test.x  test_kmc_functions.c  test_kmc_functions.h
extensions/wrap/: kmc_functions.i
kynetix/: __init__.py  compatutil.py  descriptors.py  functions.py  model.py  mpicommons.py
kynetix/correctors/: __init__.py  corrector_base.py  thermodynamic_corrector.py
kynetix/database/: elements_data.py  lattice_data.py  thermo_data.py
kynetix/descriptors/: component_descriptors.py  descriptors.py
kynetix/errors/: error.py
kynetix/models/: kinetic_model.py  kmc_model.py  micro_kinetic_model.py
kynetix/parsers/: __init__.py  absolute_energy_parser.py  csv_parser.py  kmc_parser.py  parser_base.py  relative_energy_parser.py  rxn_parser.py
kynetix/plotters/: __init__.py  en_profile.py  energy_profile_plotter.py  grid_plot.py  kmc_plotter.py  plotter_base.py  scatter_plot.py
kynetix/solvers/: __init__.py  kmc_functions.py  kmc_plugins.py  kmc_plugins_old.py  kmc_solver.py  mean_field_solver.py  quasi_equilibrium_solver.py  rootfinding_iterators.py  solver_base.py  steady_state_solver.py
kynetix/table_makers/: __init__.py  csv_maker.py  table_maker_base.py
kynetix/utilities/: check_utilities.py  coordinate_utilities.py  format_utilities.py  profiling_utitlities.py
mikiac/: __init__.py  compatutil.py  mpicommons.py
mikiac/correctors/: corrector_base.py  thermodynamic_corrector.py
mikiac/database/: elements_data.py  thermo_data.py
mikiac/descriptors/: component_descriptors.py  descriptors.py
mikiac/models/: kinetic_model.py  kmc_model.py  micro_kinetic_model.py
mikiac/parsers/: __init__.py  absolute_energy_parser.py  kmc_parser.py  parser_base.py  relative_energy_parser.py  rxn_parser.py
mikiac/plotters/: en_profile.py  energy_profile_plotter.py  plotter_base.py
mikiac/solvers/: __init__.py  kmc_solver.py  mean_field_solver.py  rootfinding_iterators.py  solver_base.py  steady_state_solver.py
mikiac/utilities/: check_utilities.py  format_utilities.py  profiling_utitlities.py
pynetic/: model.py
pynetic/correctors/: __init__.py  corrector_base.py  thermodynamic_corrector.py
pynetic/loggers/: logger.py
pynetic/parsers/: parser_base.py
pynetic/plotters/: plotter_base.py  thermo_plotter.py
pynetic/solvers/: __init__.py  solver_base.py
pynetic/table_makers/: __init__.py  table_maker_base.py
pynetics/: __init__.py  functions.py  logging.conf  model.py
pynetics/correctors/: corrector_base.py  parameter_data.py  (+1 more)
scaks/: __init__.py  functions.py  mpicommons.py
scaks/errors/: error.py
scripts/: formic_acid.mkm  kmc_setup.mkm  load_data.py  load_model.py  model_setup.mkm  plot_TOFs.py  plot_coverages.py  plot_energy_profile.py  plot_grids.py  plot_traj.py  rel_energy.py  run.py  run_absolute.py  run_kmc.py  run_relative.py  template.mkm  togif.py
unit_test/: .coveragerc  __init__.py  catynetics_tests.py  kynetix_tests.py  mikiac_tests.py  model_test.py  parser_test.py  run_tests
(+475 files in other folders)
